[package]
name = "esp-lora-2"
version = "0.1.0"
authors = ["daca <daca@itu.dk>"]
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.30.6", features = ["binstart"] }
sx127x_lora =  {git = "https://github.com/DavidCarl/sx127x_lora"}
#radio-sx127x = { version ="0.13.0", default-features = false}
#esp-idf-hal = "0.33.1"
esp-idf-hal = {git = "https://github.com/DavidCarl/esp-idf-hal"}
embedded-hal = "=1.0.0-alpha.7"

[build-dependencies]
embuild = "0.28"
anyhow = "1"
